# llm-text-evaluation

./: .gitignore  pyproject.toml
dataset/final/: filter.ts
dataset/source_1/htmls/: e1.html  e10.html  e2.html  e3.html  e4.html  e5.html  e6.html  e7.html  e8.html  e9.html  p1.html  p10.html  p11.html  p2.html  p3.html  p4.html  p5.html  p6.html  p7.html  p8.html  p9.html
dataset/source_2/htmls/: s2_1.html  s2_2.html  s2_3.html  s2_4.html  s2_5.html  s2_6.html
framework/: example.py  pyproject.toml
framework/lib/: __init__.py  attacks.py  benchmark.py  dataset.py  metrics.py  partial.py  perturb.py  prompt.py  report.py  report_html.py  types.py
framework/lib/providers/: __init__.py  base.py  ollama.py  opencode_go.py  openrouter.py  pool.py
